# bookstore

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  SECURITY.md  db.sqlite3  docker-compose-prod.yml  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  story.md  tasks.md
.github/workflows/: codeql-analysis.yml  deploy.yaml  security.yaml  styles.yml  tests.yml
books/: admin.py  factories.py  models.py  sitemaps.py  tests.py  urls.py  views.py
books/management/commands/: build_search_index.py  sedici.py  sleep.py  startjobs.py
books/migrations/: 0001_initial.py  0002_book_created_on_book_description_book_link_and_more.py  0002_review.py  0003_alter_book_options.py  0003_book_cover.py  0004_alter_book_price.py  0004_auto_20200419_1800.py  0005_alter_book_author_alter_book_title.py  0005_alter_review_id.py  0006_alter_book_link.py
books/scrapers/: base.py  sedici.py
books/tests/: test_models.py  test_views.py
bookstore_project/: decorators.py  settings.py  urls.py  wsgi.py
config/prod/: gunicorn.conf.py  nginx.conf
docs/: index.html  my-awesome-diagram.drawio  thoughts.md
orders/: urls.py  views.py
pages/: forms.py  sitemaps.py  tests.py  urls.py  views.py
pages/static/pages/js/: base.js
pages/templates/pages/: contact.html  feedback.html
static/js/: base.js
staticfiles/: Readme.md
staticfiles/css/: base.css
templates/: 404.html  500.html  _alert.html  _base.html  _header.html  _toast.html  home.html  signup.html
templates/account/: email_confirm.html  logout.html
templates/account/email/: email_confirmation_message.txt
templates/books/: book_detail.html  book_list.html  search_results.html
templates/includes/: _alert.html  _footer.html  _pagination.html
templates/orders/: charge.html  purchase.html
templates/registration/: login.html
users/: admin.py  forms.py  tests.py
users/migrations/: 0001_initial.py  0002_auto_20200822_1630.py  0003_alter_customuser_id.py
